Se le pega a la API y se obtienen todos los equipos. Con esos equipos mostramos todos los partidos de hoy

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -8,38 +8,9 @@
   <title>Match Score</title>
 </head>
 <body>
-<main>
+<main id="main-container">
 
-    <div>
-    <div class="match-score-container">
-        <div class="team">
-          <img src="../images/boston.png" alt="Team 1 Logo" class="team-logo">
-          <span class="team-name">Boston Celtics</span>
-          <span class="team-score">85</span>
-        </div>
-        <div class="separator">-</div>
-        <div class="team">
-          <span class="team-score">90</span>
-          <span class="team-name">San Antonio Spurs</span>
-          <img src="../images/sanantonio.png" alt="Team 2 Logo" class="team-logo">
-        </div>
-      </div>
-      
-      
-      <div class="match-score-container">
-          <div class="team">
-            <img src="../images/boston.png" alt="Team 1 Logo" class="team-logo">
-            <span class="team-name">Boston Celtics</span>
-            <span class="team-score">85</span>
-          </div>
-          <div class="separator">-</div>
-          <div class="team">
-            <span class="team-score">90</span>
-            <span class="team-name">San Antonio Spurs</span>
-            <img src="../images/sanantonio.png" alt="Team 2 Logo" class="team-logo">
-          </div>
-        </div>
-    </div>
+  
 
 </main>
 
