--- a/popup/popup.html
+++ b/popup/popup.html
@@ -3,16 +3,41 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" href="popup.css">
   <script type="module" defer src="popup.js"></script>
   <title>Match Score</title>
 </head>
 <body>
+  
+<nav>
+  <div id="fechas">
+    <div id="yesterday" style="color: brown; justify-content: center; display: flex;">
+
+    </div>
+
+    <div id="today" style="color: brown; justify-content: center; display: flex;">
+
+    </div>
+    
+    <div id="tomorrow" style="color: brown; justify-content: center; display: flex;">
+
+    </div>
+  </div>
+</nav>
+<hr>
 <main id="main-container">
 
   
 
 </main>
+
+
+<div>
+  LET:D
+  <button type="button" class="btn btn-primary">Primary</button>
+
+</div>
 
 </body>
 </html>
