--- a/popup/popup.html
+++ b/popup/popup.html
@@ -12,17 +12,13 @@
   
 <nav>
   <div id="fechas">
-    <div id="yesterday" style="color: brown; justify-content: center; display: flex;">
-
-    </div>
-
-    <div id="today" style="color: brown; justify-content: center; display: flex;">
-
-    </div>
     
-    <div id="tomorrow" style="color: brown; justify-content: center; display: flex;">
+    <button id="yesterday" type="button" class="btn btn-outline-light"></button>
+ 
+    <button id="today" type="button" class="btn btn-outline-light"></button>
 
-    </div>
+    <button id="tomorrow" type="button" class="btn btn-outline-light"></button>
+
   </div>
 </nav>
 <hr>
