--- a/popup/popup.html
+++ b/popup/popup.html
@@ -13,27 +13,26 @@
 <nav>
   <div id="fechas">
     
-    <button id="yesterday" type="button" class="btn btn-outline-light"></button>
+    <button id="yesterday" type="button" class="botonFecha btn btn-outline-light">Ayer</button>
  
-    <button id="today" type="button" class="btn btn-outline-light"></button>
+    <button id="today" type="button" class="botonFecha btn btn-outline-light">Hoy</button>
 
-    <button id="tomorrow" type="button" class="btn btn-outline-light"></button>
+    <button id="tomorrow" type="button" class="botonFecha btn btn-outline-light">Mañana</button>
 
   </div>
 </nav>
 <hr>
+
+<div class="spinner-border text-primary" role="status">
+  <span class="sr-only">Loading...</span>
+</div>
+
 <main id="main-container">
 
   
 
 </main>
 
-
-<div>
-  LET:D
-  <button type="button" class="btn btn-primary">Primary</button>
-
-</div>
 
 </body>
 </html>
