Loading Spinner. Formmating. V 0.6 DONE

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -23,9 +23,13 @@
 </nav>
 <hr>
 
-<div class="spinner-border text-primary" role="status">
-  <span class="sr-only">Loading...</span>
+<div class="basketball">
+  <div class="ball">
+  <div class="lines"></div>
+  </div>
+  <div class="shadow"></div>
 </div>
+
 
 <main id="main-container">
 
