Standings Fully implemented + bug fixes

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -31,10 +31,25 @@
     </nav>
     <nav id='conferenciaBotones' class="navbar navbar-dark bg-dark" style="display: none;">
       <div class="d-flex justify-content-around w-100">
-        <button id="east" type="button" class="botonConferencia btn btn-outline-light">East</button>
         <button id="west" type="button" class="botonConferencia btn btn-outline-light">West</button>
+        <button id="east" type="button" class="botonConferencia btn btn-outline-light">East</button>
       </div>
     </nav>
+    <div id="standingsDiv" style="display: none;">
+      <table>
+        <thead>
+            <tr>
+                <th>Pos.</th>
+                <th>Team</th>
+                <th>Wins</th>
+                <th>Losses</th>
+            </tr>
+        </thead>
+        <tbody id="bodyTabla">
+        </tbody>
+    </table>
+
+    </div>
     
     
     <hr/>
