Front end de la tabla de standings + distincion de equipos ganadores

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -39,8 +39,8 @@
       <table>
         <thead>
             <tr>
-                <th>Pos.</th>
-                <th>Team</th>
+                <th >Pos.</th>
+                <th style="justify-content:center">Team</th>
                 <th>Wins</th>
                 <th>Losses</th>
             </tr>
@@ -52,9 +52,8 @@
     </div>
     
     
-    <hr/>
 
-    <div class="container mt-3">
+    <div class="container mt-3" id="basketballContainer">
       <div class="basketball" style="display: block">
         <div class="ball">
           <div class="lines"></div>
